--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "openlayers"]
 	path = openlayers
 	url = https://github.com/openlayers/openlayers
+[submodule "static/js"]
+	path = static/js
+	url = https://github.com/openlayers/openlayers.git
