Modified static directory, and set openlayers to specific git branch. Added new server code.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "openlayers"]
-	path = openlayers
-	url = https://github.com/openlayers/openlayers
-[submodule "static/js"]
-	path = static/js
+[submodule "WaitTimes/static/js/openlayers"]
+	path = WaitTimes/static/js/openlayers
 	url = https://github.com/openlayers/openlayers.git
